# Clear-Hear-and

./: .gitignore  LICENSE  README.md  build.gradle  prompt.md  settings.gradle
.claude/: settings.local.json
DOCS/: ANGULAR_STYLE_ARCHITECTURE.md  AUDIO_PROCESSING_FLOWCHART.md  CODE_ORGANIZATION_COMPLETE.md  CREATION_PLAN.md  EXTREME_MODE_NOISE_PROFILE_PROPOSAL.md  FINAL_SUMMARY.md  HOW_TO_RUN.md  LOG_ANALYSIS_2025-10-15_EVENING.md  NOISE_REDUCTION_TRIALS.md  SESSION_SUMMARY_2025-10-15.md  TODO_clear_hear.md  TODO_clear_hear_and.md
TEMP/: ANALYSIS_AND_FIX.md  CODE_ORGANIZATION_COMPLETE.md  FINAL_IMPLEMENTATION_STATUS_2025-10-15.md  FLOWCHARTS_BEFORE_AFTER.md  IMPLEMENTATION_SUMMARY_2025-10-15_EVENING.md  RNNOISE_COMPLETE.md  RNNOISE_IMPLEMENTATION_STATUS.md  TODO_clear_hear_and.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  rnnoise_jni.c
app/src/main/java/com/clearhear/audio/: AudioDeviceManager.kt  AudioProcessor.kt
app/src/main/java/com/clearhear/audio/dsp/: BandPassFilter.kt  Dsp.kt  Fft.kt  SixBandEqualizer.kt  SpectralNoiseGate.kt  SpectralNoiseSuppressor.kt  WienerSuppressor.kt
app/src/main/java/com/clearhear/audio/logging/: AudioLogger.kt
app/src/main/java/com/clearhear/audio/processors/: ExtremeModeProcessor.kt  IAudioModeProcessor.kt  LightModeProcessor.kt  OffModeProcessor.kt
app/src/main/java/com/clearhear/services/: AudioForegroundService.kt
app/src/main/java/com/clearhear/ui/: MainActivity.kt
app/src/main/java/com/clearhearand/: AudioForegroundService.kt  MainActivity.kt
app/src/main/java/com/clearhearand/audio/: AudioDeviceManager.kt  AudioLogger.kt  AudioProcessor.kt  Dsp.kt  Fft.kt  RNNoise.kt  WienerSuppressor.kt
app/src/main/java/com/clearhearand/audio/dsp/: BandPassFilter.kt  Dsp.kt  Fft.kt  SixBandEqualizer.kt  SpectralGate.kt  SpectralNoiseGate.kt  SpectralNoiseSuppressor.kt  WienerSuppressor.kt
app/src/main/java/com/clearhearand/audio/logging/: AudioLogger.kt
app/src/main/java/com/clearhearand/audio/processors/: ExtremeModeProcessor.kt  IAudioModeProcessor.kt  LightModeProcessor.kt  OffModeProcessor.kt
app/src/main/java/com/clearhearand/audio/recording/: ExtremeNoiseProfileRecorder.kt
app/src/main/java/com/clearhearand/services/: AudioForegroundService.kt
app/src/main/java/com/clearhearand/ui/: MainActivity.kt
app/src/main/java/com/example/audio/: RNNoise.kt
app/src/main/res/drawable/: ic_headphones.xml  ic_headset_mic.xml  ic_mic.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/main/res/xml/: backup_rules.xml
(+27 files in other folders)
